Refactor: reduce code duplication and optimize collections
- Create BinaryOperationNode base class for math nodes (reduces ~150 lines)
- Add helper method for blueprint execution in event handlers
- Cache unmodifiable collection views in BlueprintNode and BlueprintGraph
- Optimize stream operations to use toList() instead of collect(Collectors.toList())
- Remove unused imports

Co-authored-by: boul2gom <56512795+boul2gom@users.noreply.github.com>